# csvwise

./: .gitignore  DEVELOPMENT.md  LICENSE  PR_REPORT_20260204.md  PyPI-Recovery-Codes-xiujia-2026-02-11T00_34_41.984332.txt  README.md  TESTING.md  app.py  pyproject.toml  requirements.txt  run_web.sh  setup.py  student_health_data.csv
examples/: sales_demo.csv  stocks_demo.csv
sample_csvs/: best sellin books 2023.csv  best sellin books 2024.csv  best sellin books 2025.csv  best sellin books total.csv
src/: csvwise.py  db_connector.py
tests/: test_csvwise.py
